--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flipping Card UI Design</title>
-    <link rel="stylesheet" href="fliping-card.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -14,10 +14,10 @@
             <div class="card front-face">
                 <header>
                     <span class="logo">
-                        <img src="imgs/2circle-logo-removebg-preview.png" alt="">
+                        <img src="./2circle-logo-removebg-preview.png" alt="">
                         <h5>Master Card</h5>
                     </span>
-                    <img src="imgs/sim-card-chip-removebg-preview.png" alt="" class="chip">
+                    <img src="./sim-card-chip-removebg-preview.png" alt="" class="chip">
                 </header>
 
                 <div class="card-details">
